{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 31,
  "lineage": "b169dc4f-eec0-b272-785c-d43336c75c27",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "demo_us_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:458888156164:loadbalancer/app/demo-us-alb/64df3688d2144b81",
            "arn_suffix": "app/demo-us-alb/64df3688d2144b81",
            "dns_name": "demo-us-alb-901974292.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:458888156164:loadbalancer/app/demo-us-alb/64df3688d2144b81",
            "idle_timeout": 600,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "demo-us-alb",
            "security_groups": [
              "sg-098f8cfaa4180fbc4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0575ded49d53800c1"
              },
              {
                "subnet_id": "subnet-081dafb076f132f00"
              },
              {
                "subnet_id": "subnet-0dc85b771dfd46aab"
              }
            ],
            "subnets": [
              "subnet-0575ded49d53800c1",
              "subnet-081dafb076f132f00",
              "subnet-0dc85b771dfd46aab"
            ],
            "vpc_id": "vpc-06d030d5f5f6090cb",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.demo-public-1",
            "aws_subnet.demo-public-2",
            "aws_subnet.demo-public-3",
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:458888156164:listener/app/demo-us-alb/64df3688d2144b81/48542d9f24f1d9be",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:458888156164:targetgroup/nginx/f6adc6fdeff7b407",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:458888156164:listener/app/demo-us-alb/64df3688d2144b81/48542d9f24f1d9be",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:458888156164:loadbalancer/app/demo-us-alb/64df3688d2144b81",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.demo_us_alb",
            "aws_alb_target_group.nginx",
            "aws_security_group.lb_sg",
            "aws_subnet.demo-public-1",
            "aws_subnet.demo-public-2",
            "aws_subnet.demo-public-3",
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "nginx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:458888156164:targetgroup/nginx/f6adc6fdeff7b407",
            "arn_suffix": "targetgroup/nginx/f6adc6fdeff7b407",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:458888156164:targetgroup/nginx/f6adc6fdeff7b407",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06d030d5f5f6090cb"
          },
          "dependencies": [
            "aws_alb.demo_us_alb",
            "aws_security_group.lb_sg",
            "aws_subnet.demo-public-1",
            "aws_subnet.demo-public-2",
            "aws_subnet.demo-public-3",
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-01f77338b278a592d",
            "owner_id": "458888156164",
            "tags": {
              "Name": "demo-IG"
            },
            "vpc_id": "vpc-06d030d5f5f6090cb"
          },
          "dependencies": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09f555dc99efef216",
            "owner_id": "458888156164",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f77338b278a592d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-public-1"
            },
            "vpc_id": "vpc-06d030d5f5f6090cb"
          },
          "dependencies": [
            "aws_internet_gateway.demo-gw",
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2af9e161822e0a9",
            "route_table_id": "rtb-09f555dc99efef216",
            "subnet_id": "subnet-081dafb076f132f00"
          },
          "dependencies": [
            "aws_internet_gateway.demo-gw",
            "aws_route_table.demo-public",
            "aws_subnet.demo-public-1",
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7cf50ff94335c2b",
            "route_table_id": "rtb-09f555dc99efef216",
            "subnet_id": "subnet-0575ded49d53800c1"
          },
          "dependencies": [
            "aws_internet_gateway.demo-gw",
            "aws_route_table.demo-public",
            "aws_subnet.demo-public-2",
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f671d82857c7fa1",
            "route_table_id": "rtb-09f555dc99efef216",
            "subnet_id": "subnet-0dc85b771dfd46aab"
          },
          "dependencies": [
            "aws_internet_gateway.demo-gw",
            "aws_route_table.demo-public",
            "aws_subnet.demo-public-3",
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:458888156164:security-group/sg-0fdc946f8202a070a",
            "description": "controls direct access to application instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fdc946f8202a070a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Access from ALB",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098f8cfaa4180fbc4"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "application-instances-sg",
            "name_prefix": null,
            "owner_id": "458888156164",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-06d030d5f5f6090cb"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:458888156164:security-group/sg-098f8cfaa4180fbc4",
            "description": "controls access to the application ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098f8cfaa4180fbc4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-ELB",
            "name_prefix": null,
            "owner_id": "458888156164",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-06d030d5f5f6090cb"
          },
          "dependencies": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:458888156164:subnet/subnet-0989d9c32de3dc4c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.21.40.0/24",
            "id": "subnet-0989d9c32de3dc4c1",
            "map_public_ip_on_launch": false,
            "owner_id": "458888156164",
            "tags": {
              "Name": "demo-private-1"
            },
            "vpc_id": "vpc-06d030d5f5f6090cb"
          },
          "dependencies": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:458888156164:subnet/subnet-079317119969d951a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.21.50.0/24",
            "id": "subnet-079317119969d951a",
            "map_public_ip_on_launch": false,
            "owner_id": "458888156164",
            "tags": {
              "Name": "demo-private-2"
            },
            "vpc_id": "vpc-06d030d5f5f6090cb"
          },
          "dependencies": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:458888156164:subnet/subnet-04c4f2029192f3942",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.21.60.0/24",
            "id": "subnet-04c4f2029192f3942",
            "map_public_ip_on_launch": false,
            "owner_id": "458888156164",
            "tags": {
              "Name": "demo-private-3"
            },
            "vpc_id": "vpc-06d030d5f5f6090cb"
          },
          "dependencies": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:458888156164:subnet/subnet-081dafb076f132f00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.21.10.0/24",
            "id": "subnet-081dafb076f132f00",
            "map_public_ip_on_launch": true,
            "owner_id": "458888156164",
            "tags": {
              "Name": "demo-public-1"
            },
            "vpc_id": "vpc-06d030d5f5f6090cb"
          },
          "dependencies": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:458888156164:subnet/subnet-0575ded49d53800c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.21.20.0/24",
            "id": "subnet-0575ded49d53800c1",
            "map_public_ip_on_launch": true,
            "owner_id": "458888156164",
            "tags": {
              "Name": "demo-public-2"
            },
            "vpc_id": "vpc-06d030d5f5f6090cb"
          },
          "dependencies": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:458888156164:subnet/subnet-0dc85b771dfd46aab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.21.30.0/24",
            "id": "subnet-0dc85b771dfd46aab",
            "map_public_ip_on_launch": true,
            "owner_id": "458888156164",
            "tags": {
              "Name": "demo-public-3"
            },
            "vpc_id": "vpc-06d030d5f5f6090cb"
          },
          "dependencies": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-tf",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:458888156164:vpc/vpc-06d030d5f5f6090cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.21.0.0/16",
            "default_network_acl_id": "acl-094845b699eb3b920",
            "default_route_table_id": "rtb-0753568e1724a76ae",
            "default_security_group_id": "sg-070a4e6dd4abe28a2",
            "dhcp_options_id": "dopt-8b3da4f3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06d030d5f5f6090cb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0753568e1724a76ae",
            "owner_id": "458888156164",
            "tags": {
              "Name": "demo-terraform"
            }
          }
        }
      ]
    }
  ]
}